--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ nav:
         - Bi-entity Action Types: types/bientity_action_types.md
     - Condition Types:
         - Bi-entity Condition Types: types/bientity_condition_types.md
+        - Block Condition Types: types/block_condition_types.md
+        - Entity Condition Types: types/entity_condition_types.md
 
 theme: readthedocs
 markdown_extensions:
